force-app/main/default/objects/copado__Artifact_Version__c/copado__Artifact_Version__c.object-meta.xml
<CustomObject>
    <label>Package Version</label>
    <nameField>
        <label>Artifact Versions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>