force-app/main/default/objects/copado__Artifact_Version__c/fields/cmcSf__Ancestor_Id__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Ancestor_Id__c</fullName>
    <inlineHelpText>Ancestor Id is used to specify an existing promoted (published) package version. It is specified as a package version id (04t) or as a package version alias. In Copado, this field reflects the value in your project configuration (sfdx-project.json) and cannot be edited from the UI. Be mindful of what version is used as ancestor as package ancestry impacts which package version upgrades are allowed.</inlineHelpText>
    <label>Ancestor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>