force-app/main/default/objects/copado__Artifact_Version__c/fields/cmcSf__Ancestor_Version__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Ancestor_Version__c</fullName>
    <inlineHelpText>Ancestor Version is used to specify an existing promoted (published) package version. It is typically specified in the format, e.g., 4.6.0 or using a keyword like HIGHEST. In Copado, this field reflects the value in your project configuration (sfdx-project.json) and cannot be edited from the UI. Be mindful of what version is used as ancestor as package ancestry impacts which package version upgrades are allowed.</inlineHelpText>
    <label>Ancestor Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>