force-app/main/default/objects/copado__Artifact_Version__c/fields/cmcSf__Api_Version__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Api_Version__c</fullName>
    <inlineHelpText>The api version to be used for the packaging CLI commands. If this is not specified, the Api Version value from the parent Package will be used. If neither has been specified, the default value, i.e. the api version of the Dev Hub, will be used. Specify in the format, e.g. 54.0.</inlineHelpText>
    <label>Api Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>