force-app/main/default/objects/copado__Artifact_Version__c/fields/cmcSf__Post_Install_Script__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Post_Install_Script__c</fullName>
    <inlineHelpText>The name of the Apex class implementing InstallHandler which will be executed in the subscriber org after the managed package is installed or upgraded.</inlineHelpText>
    <label>Post Install Script</label>
    <length>60</length>
    <type>Text</type>
</CustomField>