force-app/main/default/objects/copado__Artifact_Version__c/fields/cmcSf__Post_Install_URL__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Post_Install_URL__c</fullName>
    <label>Post Install URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>