force-app/main/default/objects/copado__Artifact_Version__c/fields/cmcSf__Release_Notes_URL__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Release_Notes_URL__c</fullName>
    <label>Release Notes URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>