force-app/main/default/objects/copado__Artifact_Version__c/fields/cmcSf__Uninstall_Script__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Uninstall_Script__c</fullName>
    <inlineHelpText>The name of the Apex class implementing UninstallHandler which will be executed in the subscriber org before the managed package is uninstalled.</inlineHelpText>
    <label>Uninstall Script</label>
    <length>60</length>
    <type>Text</type>
</CustomField>