force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__Branch__c.field-meta.xml
<CustomField>
    <fullName>copado__Branch__c</fullName>
    <inlineHelpText>The package version’s branch. Package version content is stored in this branch in the given repository. You may reach your repository information from the parent artifact record.</inlineHelpText>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>