force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__DefinitionFile__c.field-meta.xml
<CustomField>
    <fullName>copado__DefinitionFile__c</fullName>
    <label>Definition File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>