force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__Production_Installation_URL__c.field-meta.xml
<CustomField>
    <fullName>copado__Production_Installation_URL__c</fullName>
    <formula>HYPERLINK(&apos;https://login.salesforce.com/packaging/installPackage.apexp?p0=&apos;+copado__Subscriber_Version_Id__c, &apos;https://login.salesforce.com/packaging/installPackage.apexp?p0=&apos;+copado__Subscriber_Version_Id__c, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this URL in order to install this package in a production environment.</inlineHelpText>
    <label>Production Installation URL</label>
    <type>Text</type>
</CustomField>