force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__Release_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Release_Status__c</fullName>
    <formula>TEXT(copado__Release__r.copado__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Status</label>
    <type>Text</type>
</CustomField>