force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Status__c</fullName>
    <inlineHelpText>Draft indicates that a placeholder record has been created.

Pre-Release indicates a package version that has been generated but not yet promoted or is not ready for release. 

A package version with Published status, indicates it can be released or deployed to production. 

Deprecated highlights a package version that has been deleted and is no longer available for use.

Open, Locked and Cancelled are used for packages related to User Story bundles.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Pre-Release</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Deprecated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>