force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__Subscriber_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Subscriber_Version_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>In order to install a package to a Salesforce environment, installation URL requires a subscriber Id. Please refer to installation URLs.</inlineHelpText>
    <label>Subscriber Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>