force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__User_Story__c.field-meta.xml
<CustomField>
    <fullName>copado__User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Bundle Package</relationshipLabel>
    <relationshipName>Bundle_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>