force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__Version__c.field-meta.xml
<CustomField>
    <fullName>copado__Version__c</fullName>
    <formula>copado__Release__r.copado__Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version</label>
    <type>Text</type>
</CustomField>