force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__Version_Description__c.field-meta.xml
<CustomField>
    <fullName>copado__Version_Description__c</fullName>
    <inlineHelpText>The description of the package version</inlineHelpText>
    <label>Version Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>