force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__Version_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Version_Name__c</fullName>
    <inlineHelpText>the name of the package version which entered by user while version creation.</inlineHelpText>
    <label>Version Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>