force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__Version_number__c.field-meta.xml
<CustomField>
    <fullName>copado__Version_number__c</fullName>
    <inlineHelpText>The version number of the package version. Must be in major.minor.patch.build format.</inlineHelpText>
    <label>Version number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>